# url_shortner_backend

./: .env_example  .gitignore  README.md  manage.py  pyproject.toml  settings.py  urls.py  wsgi.py
.github/workflows/: test_runner.yml
apps/: __init__.py
apps/auth_/: apps.py  serializers.py  views.py
apps/linksly/: apps.py  models.py  permissions.py  schemas.py  serializers.py  views.py
apps/linksly/migrations/: 0001_initial.py  0002_alter_url_user.py  0003_alter_url_status.py  0004_url_redirects_delete_redirect.py
apps/linksly/templates/linksly/: 404.html
auth/: views.py
auth/auth/: settings.py
linksly/: apps.py  models.py
linksly/migrations/: 0001_initial.py  0002_redirect.py
tests/: __init__.py  factories.py
tests/auth_/: __init__.py  test_login_user.py  test_register_user.py  test_user_serializer.py  test_username_already_taken.py
tests/linksly/: __init__.py  test_graphql_endponts.py  test_handle_redirects.py  test_urls_route.py
